# antiAARSLS

./: .gitignore  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/app/: config.py  db.py  main.py  utils.py
backend/app/api/: __init__.py  admin.py  auth.py  faculty.py  recruiter.py  student.py  upload.py
backend/database/: migrations.sql  schema.sql  scoring_logic.sql
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: DashboardLayout.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/lib/: api.js  supabase.js
frontend/src/pages/: AdminDashboard.jsx  AdminUsersPage.jsx  AuditLogsPage.jsx  CertificationsPage.jsx  FacultyDashboard.jsx  LeaderboardPage.jsx  Login.jsx  NotificationsPage.jsx  ProfilePage.jsx  ProjectsPage.jsx  RecruiterDashboard.jsx  SettingsPage.jsx  SkillsPage.jsx  StudentDashboard.jsx  VerificationPage.jsx
